| Summary: | ASTERISK-30283: app_voicemail: Fix msg_create_from_file not sending email to user | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-11-03 15:24:26 | Date Closed: | 2022-12-08 12:18:18.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_voicemail |
| Versions: | 20.0.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When the m option in MixMonitor is used, this allows the recording to be sent to somebody's voicemail box. The AMI event for a new message is sent, but no email is ever sent out since notify_new_message isn't called. This fixes that. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-11-03 15:24:32.322-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-12-08 12:18:19.558-0600 Change 19468 merged by Friendly Automation: app_voicemail: Fix missing email in msg_create_from_file. [https://gerrit.asterisk.org/c/asterisk/+/19468|https://gerrit.asterisk.org/c/asterisk/+/19468] By: Friendly Automation (friendly-automation) 2022-12-08 21:30:50.345-0600 Change 19672 merged by Friendly Automation: app_voicemail: Fix missing email in msg_create_from_file. [https://gerrit.asterisk.org/c/asterisk/+/19672|https://gerrit.asterisk.org/c/asterisk/+/19672] By: Friendly Automation (friendly-automation) 2022-12-09 06:45:18.497-0600 Change 19673 merged by George Joseph: app_voicemail: Fix missing email in msg_create_from_file. [https://gerrit.asterisk.org/c/asterisk/+/19673|https://gerrit.asterisk.org/c/asterisk/+/19673] | ||